<resources>
    <string name="app_name">EsperssoTest</string>
    <string name="name">Name</string>
    <string name="enterName">Enter your name</string>
    <string name="enter">Enter</string>
</resources>